--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -13,7 +13,9 @@
 		<artifactId>parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
+	<properties>
+		<swagger2.version>2.9.2</swagger2.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>doubleone.mobilesearch</groupId>
@@ -55,6 +57,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
+		</dependency>
+		<!-- 文档构建工具-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger2.version}</version>
 		</dependency>
 	</dependencies>
 
