统一异常处理及数据交换格式

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.servlet.multipart.location=${HOME}/tmp
 
 mobilesearch.scratch.host=127.0.0.3
 
-mobilesearch.scratch.processors=ZGCPageProcessor, TPYPageProcessor, missing 
+mobilesearch.scratch.processors=ZGCPageProcessor, TPYPageProcessor
+
+spring.profiles.active=dev
