--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -81,6 +81,21 @@
 	      <artifactId>elasticsearch</artifactId>
 	      <version>6.6.1</version>
 	    </dependency>
+		<!--h2 mysql-->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		</dependencies>
 
 	<build>
